fixed croppie styling error

--- a/projects/wolf-app/src/modules/bookmark/components/bookmark-form/bookmark-form.component.scss
+++ b/projects/wolf-app/src/modules/bookmark/components/bookmark-form/bookmark-form.component.scss
@@ -11,7 +11,7 @@
 		position						: sticky;
 		top								: 0;
 		min-height						: 10rem;
-		margin-bottom					: 1rem;
+		margin-bottom					: var(--gap-xxl);
 
 		& > div[bookmark-overlay] {
 
@@ -32,11 +32,23 @@
 		@extend %flex-column;
 		flex			: 1;
 		margin-bottom	: 1rem;
+		gap				: var(--gap);
+
+		& > div[bookmark-form-left] {
+
+			@extend %flex-column;
+			& > w-croppie {
+
+				justify-content: center;
+
+			}
+
+		}
 
 		& > div[bookmark-form-right] {
 
 			@extend %flex-column;
-			gap				: var(--gap-sm);
+			gap				: var(--gap);
 
 			& > div {
 
@@ -53,18 +65,6 @@
 					font-size	: 1.4rem;
 
 				}
-
-			}
-
-		}
-
-		& > div[bookmark-form-left] {
-
-			@extend %flex-column;
-			& > w-croppie {
-
-				justify-content: center;
-				padding: 0.5rem;
 
 			}
 
